[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/chat/textedit.gd" type="Script" id=1]
[ext_resource path="res://ui/chat/chat_theme.tres" type="Theme" id=6]
[ext_resource path="res://ui/chat/TextEditor.gd" type="Script" id=7]
[ext_resource path="res://ui/theme/richtextlabel/tiny.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.1, 0.0948, 0.087, 0.784314 )

[node name="TextEditor" type="PanelContainer"]
margin_right = 965.0
margin_bottom = 50.0
theme = ExtResource( 6 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 7 )
textedit_path = NodePath("TextEditHolder/text")
placeholder_path = NodePath("TextEditHolder/placeholder")

[node name="TextEditHolder" type="MarginContainer" parent="."]
margin_right = 965.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="placeholder" type="Label" parent="TextEditHolder"]
margin_left = 5.0
margin_top = 13.0
margin_right = 141.0
margin_bottom = 36.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 1, 1, 1, 0.509804 )
text = "write text here"
valign = 2

[node name="text" type="TextEdit" parent="TextEditHolder"]
margin_left = 5.0
margin_top = 15.0
margin_right = 960.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 20 )
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
context_menu_enabled = false
smooth_scrolling = true
wrap_enabled = true
caret_blink = true
caret_blink_speed = 0.45
script = ExtResource( 1 )
max_lines = 4

[connection signal="send" from="TextEditHolder/text" to="." method="_on_text_send"]
[connection signal="text_changed" from="TextEditHolder/text" to="." method="_text_changed"]
